2010-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/fms/fms.py:
	  Add comments, including FIXME for missing comments.
	  Log at INFO level when a client connects and disconnects.
	  Fix some typos and log messages.

2010-08-30  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion-flashmedia.spec.in:
	Fix the spec to also include the translations

2010-08-30  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Josep Joan Ribas <jribas@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	If there is no framerate, no way we're going to expect audio. Set the
	stream as synced and start processing the audio buffers.

2010-08-27  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Set the caps to the output pad just when we have the real caps (with
	the streamheader). Otherwise the negotiation is done without the
	streamheader and the stream cannot be parsed properly on the other
	side.

2010-08-10  Xavier Queralt  <xqueralt@flumotion.com>

	* configure.ac:
	Require a lower gettext version

2010-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* m4 (added):
	* po (added):
	* po/LINGUAS (added):
	* po/nl.po (added):
	* po/Makevars (added):
	* po/POTFILES.in (added):
	  Make module translatable.

2010-07-21  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.xml:
	Change deprecated attribute 'description' by '_description' and add
	some missing descriptions too

2010-06-09  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Send reset always before starting streaming

2010-05-19  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: xqueralt

	* flumotion/component/producers/fms/fms.py:
	Prevent FMLE from sending too many audio packets downstream
	to prevent synchronization issues.
