@@ -1,6 +1,12 @@
 2010-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/producers/fms/fms.py:
+	  Add more debugging, so we clearly see when we receive the first
+	  buffer for audio and video, and when we send them.
+
+2010-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/producers/fms/fms.py:
 	  Add comments, including FIXME for missing comments.
 	  Log at INFO level when a client connects and disconnects.
 	  Fix some typos and log messages.
